css/front.less
@import "mixins";

.panel-grid {

	&.panel-no-style,
	&.panel-has-style > .panel-row-style{
		display: -webkit-flex;
		-webkit-flex-wrap: wrap;
		display: flex;
		flex-wrap: nowrap;
	}
}

.panel-grid-cell {

	.box-sizing( border-box );

	.panel-cell-style {
		height: 100%;
	}

	.so-panel {
		.clearfix();
	}

	.panel-last-child {
		margin-bottom: 0;
	}

	.widget-title {
		margin-top: 0;
	}
}

.panel-row-style {
	.clearfix();
}

.siteorigin-panels-stretch {
	margin-right: -1000px;
	margin-left: -1000px;
	padding-right: 1000px;
	padding-left: 1000px;
}

body.siteorigin-panels-before-styling {
	overflow-x: hidden;
}

